# pydownsongs

./: .gitignore  README.html  README.md  README.textile  buildpackageautomation.py  rebuild  setup.cfg
pydownsongs/: __init__.py  __main__.py  meta.py  others.py  songs.py  spotlist.py
pydownsongs/modules/: y1_youtube-to-mp3_org.py  youtube_dl_module.py  yt5s_com.py
