[metadata]
name = pydownsongs
license = MIT
license_file = LICENSE
version = 1.2
author = Hemish
author_email = hemish04082005@gmail.com
description = Pydownsongs is intended for both developers and regular users to download songs
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python, downloader, download, songs, python3, youtube, youtube-dl
platforms = any
url = https://github.com/hemish04082005/pydownsongs/
download_url = https://github.com/hemish04082005/pydownsongs/archive/1.2.tar.gz
project_urls =
    Bug Tracker = https://github.com/hemish04082005/pydownsongs/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.4
install_requires =
	requests
	bs4
	download
	google

[options.entry_points]
console_scripts =
    pydownsongs = pydownsongs.__main__:main